--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/papi_logo-dark.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>qapi console</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Poppins:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://cdn.usefathom.com/script.js"
+      data-site="STAZNHYZ"
+      defer
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/papi_logo-dark.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PAPI Console</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Poppins:wght@200;400&display=swap"
-    rel="stylesheet" />
-  <script src="https://cdn.usefathom.com/script.js" data-site="STAZNHYZ" defer></script>
-</head>
-
-<body class="karla-400 dark">
-  <div id="root" class="flex justify-center bg-white dark:bg-black"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body class="karla-400 dark">
+    <div id="root" class="flex justify-center bg-white dark:bg-black"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
